# constraint-theory-rust-python

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: bench_throughput.rs
examples/: automotive.py  basic_usage.py  batch_check.py
python/flux_constraint/: __init__.py  presets.py
src/: constraint.rs  lib.rs
tests/: test_constraint.rs  test_edge_cases.py  test_engine.rs  test_error_mask.rs  test_presets.py  test_python.py  test_solver.rs
