[package]
name = "flux-constraint"
version = "0.1.0"
edition = "2021"
description = "Rust constraint engine with PyO3 Python bindings — bare-metal constraint checking from Python"
repository = "https://github.com/SuperInstance/constraint-theory-rust-python"
license = "Apache-2.0"

[lib]
name = "flux_constraint"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_throughput"
harness = false
path = "benches/bench_throughput.rs"

[profile.release]
lto = true
codegen-units = 1
